add base design

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title>Name Title</title>
+            <title>Title</title>
             <meta charset="utf-8">
             <link rel="stylesheet" href="./styles/styles.css">
         </head>
@@ -9,19 +9,22 @@
             <header>
                 <menu>
                     <ul>
-                        <li><button>button 1</button></li>
-                        <li><button>button 2</button></li>
-                        <li><button>button 3</button></li>
-                        <li><button>button 4</button></li>
-                        <li><button>button 5</button></li>
+                        <li><a href="#">button 1</a></li>
+                        <li><a href="#">button 2</a></li>
+                        <li><a href="#">button 3</a></li>
+                        <li><a href="#">button 4</a></li>
+                        <li><a href="#">button 5</a></li>
                     </ul>
                 </menu>
             </header>
                 <div class="main">
-                    <div class="wrapper"></div>
+                    <div class="wrapper">
+                        <p>this is wrapper</p>
+                    </div>
                 </div>
             <footer>
-                <p>this is footer</p>
+                <p>© Project WebDesign SYI - FEM ČZU 2024</p>
+                <p>all rights reserved</p>
             </footer>
         </body>
     </html>
