login page done

--- a/login.html
+++ b/login.html
@@ -36,11 +36,13 @@
                             <input type="login" placeholder="login">
                             <input type="password" placeholder="password">
                             <div class="resetContainer">
-                                <input type="checkbox">
-                                <span>Remember me</span>
+                                <div class="checkboxContainer">
+                                    <input type="checkbox">
+                                    <span>Remember me</span>
+                                </div>
                                 <a href="">Reset password</a>
                             </div>
-                            <button class="loginButton">Log in</button>
+                            <button class="loginButton">log in</button>
                         </div>
                     </div>
                 </main>
