article page done

--- a/login.html
+++ b/login.html
@@ -52,8 +52,8 @@
                         <path d="M0.722462 0.0936124H5.40974V24.8083H0.722462V0.0936124ZM17.2346 4.21273V10.782H26.4316V14.6881H17.2346V24.8083H12.5474V0.0936124H28.7753V4.21273H17.2346ZM43.7343 0.0936124H48.4216V24.8083H43.7343V0.0936124ZM60.9212 4.39028H53.8903V0.0936124H72.6394V4.39028H65.6085V24.8083H60.9212V4.39028Z" fill="#CD0606"/>
                     </svg>                    
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Articles</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="articles.html">Articles</a></li>
                         <li><a href="#">Events</a></li>
                         <li><a href="#">About us</a></li>
                     </ul>
