--- a/articles.html
+++ b/articles.html
@@ -20,7 +20,7 @@
                         </svg>
                     </a>
                     <div class="loginBox abel-regular">
-                        <a href="login.html">
+                        <a href="#">
                             <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M9.24796 10.4091C6.27116 10.4091 0.326904 11.9033 0.326904 14.8695V18.2148H18.169V14.8695C18.169 11.9033 12.2257 10.4091 9.24796 10.4091ZM9.24796 0.373657C6.78396 0.373657 4.78743 2.36935 4.78743 4.83383C4.78743 7.29805 6.78396 9.29412 9.24796 9.29412C11.7128 9.29412 13.7085 7.29805 13.7085 4.83383C13.7085 2.36935 11.7128 0.373657 9.24796 0.373657ZM9.24796 12.5277C12.5605 12.5277 16.0509 14.1559 16.0509 14.8695V16.0963H2.44589V14.8695C2.44589 14.1559 5.93642 12.5277 9.24796 12.5277ZM9.24796 2.49216C10.5416 2.49216 11.5905 3.54037 11.5905 4.83383C11.5905 6.12715 10.5416 7.17562 9.24796 7.17562C7.95431 7.17562 6.90641 6.12715 6.90641 4.83383C6.90641 3.54037 7.95431 2.49216 9.24796 2.49216Z" fill="#9C9C9C"/>
                             </svg>                                
@@ -46,86 +46,60 @@
                 <main class="main">
                     <div class="wrapper">
                         <div class="contentBlock">
-                            <div class="latestNewsBlock">
-                                <div class="infoBox">
-                                    <p class="titleLatest">LATEST NEWS</p>
-                                    <p class="categoryItem">ART</p>
-                                    <p class="dateBlock">10 October 2024</p>
-                                </div>
-                                <div class="contentLatestBlock">
+                            <menu class="menuArticles">
+                                <ul>
+                                    <li><a href="#">VIEW ALL</a></li>
+                                    <li><a href="#">SCIENCE</a></li>
+                                    <li><a href="#">ART</a></li>
+                                    <li><a href="#">TRAVEL</a></li>
+                                    <li><a href="#">TECHNOLOGY</a></li>
+                                </ul>
+                            </menu>
+                            <div class="articleItemBlock">
+                                <div class="contentLatestBlock articleImg">
                                     <img src="./img/news/image_1.png" alt="img">
-                                    <div class="contentLatestBoxItem">
-                                        <span class="contentLatestTitle">Creative Inspiration:<br />An Artist’s Studio</span>
-                                        <p class="contentLatestItemText">In the heart of every great artwork lies a space brimming with ideas, colors, and creativity. This vibrant artist's studio is filled with scattered canvases, paintbrushes, and unfinished sculptures, reflecting the dynamic process of creation. Sunlight streams in, illuminating the room and highlighting the textures and colors that bring each work to life.</p>
-                                        <button class="readMoreButton">Read more</button>
+                                    <div class="contentLatestBoxItem articleBoxItem">
+                                        <div class="infoBox">
+                                            <p class="titleLatest"></p>
+                                            <p class="categoryItem">ART</p>
+                                            <p class="dateBlock">10 October 2024</p>
+                                        </div>
+                                        <span class="contentArticleTitle">TITLE</span>
+                                        <p class="contentArticleItemText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam quis quam. Morbi scelerisque luctus velit. Fusce wisi. Aliquam id dolor. Suspendisse sagittis ultrices augue. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Etiam quis quam. </p>
+                                        <button class="readMoreButton articleButton">Read more</button>
                                     </div>
                                 </div>
-                            </div> 
-                            <div class="newsBlock">
-                                <h2 class="titleNewsBlock">DISCOVER</h2>
-                                    <div class="newsItemBox">
-                                        <div class="newsItemLine">
-                                            <div class="newsItem">
-                                                <img class="newsImgItem" src="" alt="img">
-                                                <p class="categoryItem"></p>
-                                                <h3 class="titleItem">TITLE</h3>
-                                                <p class="descriptionItem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...</p>
-                                            </div>
-                                            <div class="newsItem">
-                                                <img class="newsImgItem" src="" alt="img">
-                                                <p class="categoryItem">TECHNOLOGY</p>
-                                                <h3 class="titleItem">TITLE</h3>
-                                                <p class="descriptionItem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...</p>
-                                            </div>
-                                            <div class="newsItem">
-                                                <img class="newsImgItem" src="" alt="img">
-                                                <p class="categoryItem">ART</p>
-                                                <h3 class="titleItem">TITLE</h3>
-                                                <p class="descriptionItem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...</p>
-                                            </div>
-                                            <div class="newsItem">
-                                                <img class="newsImgItem" src="" alt="img">
-                                                <p class="categoryItem">TRAVEL</p>
-                                                <h3 class="titleItem">TITLE</h3>
-                                                <p class="descriptionItem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...</p>
-                                            </div>
+                            </div>
+                            <div class="articleItemBlock">
+                                <div class="contentLatestBlock articleImg">
+                                    <img src="./img/news/image_1.png" alt="img">
+                                    <div class="contentLatestBoxItem articleBoxItem">
+                                        <div class="infoBox">
+                                            <p class="titleLatest"></p>
+                                            <p class="categoryItem">ART</p>
+                                            <p class="dateBlock">10 October 2024</p>
                                         </div>
-                                <button class="buttonViewAll">View all</button>
+                                        <span class="contentArticleTitle">TITLE</span>
+                                        <p class="contentArticleItemText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam quis quam. Morbi scelerisque luctus velit. Fusce wisi. Aliquam id dolor. Suspendisse sagittis ultrices augue. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Etiam quis quam. </p>
+                                        <button class="readMoreButton articleButton">Read more</button>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="newsBlock">
-                                <h2 class="titleNewsBlock">SCIENCE</h2>
-                                    <div class="newsItemBox">
-                                        <div class="newsItemLine">
-                                            <div class="newsItem">
-                                                <img class="newsImgItem" src="" alt="img">
-                                                <p class="categoryItem">SCIENCE</p>
-                                                <h3 class="titleItem">TITLE</h3>
-                                                <p class="descriptionItem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...</p>
-                                            </div>
-                                            <div class="newsItem">
-                                                <img class="newsImgItem" src="" alt="img">
-                                                <p class="categoryItem">SCIENCE</p>
-                                                <h3 class="titleItem">TITLE</h3>
-                                                <p class="descriptionItem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...</p>
-                                            </div>
-                                            <div class="newsItem">
-                                                <img class="newsImgItem" src="" alt="img">
-                                                <p class="categoryItem">SCIENCE</p>
-                                                <h3 class="titleItem">TITLE</h3>
-                                                <p class="descriptionItem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...</p>
-                                            </div>
-                                            <div class="newsItem">
-                                                <img class="newsImgItem" src="" alt="img">
-                                                <p class="categoryItem">SCIENCE</p>
-                                                <h3 class="titleItem">TITLE</h3>
-                                                <p class="descriptionItem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...</p>
-                                            </div>
+                            <div class="articleItemBlock">
+                                <div class="contentLatestBlock articleImg">
+                                    <img src="./img/news/image_1.png" alt="img">
+                                    <div class="contentLatestBoxItem articleBoxItem">
+                                        <div class="infoBox">
+                                            <p class="titleLatest"></p>
+                                            <p class="categoryItem">ART</p>
+                                            <p class="dateBlock">10 October 2024</p>
                                         </div>
-                                <button class="buttonViewAll">View all</button>
+                                        <span class="contentArticleTitle">TITLE</span>
+                                        <p class="contentArticleItemText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam quis quam. Morbi scelerisque luctus velit. Fusce wisi. Aliquam id dolor. Suspendisse sagittis ultrices augue. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Etiam quis quam. </p>
+                                        <button class="readMoreButton articleButton">Read more</button>
+                                    </div>
                                 </div>
-                            </div>
-                            
+                            </div>   
                         </div>
                         <div class="widgetBox">
                             <section class="widgetBlock">
@@ -164,16 +138,6 @@
                             </section>
                         </div>
                     </div>
-                    <article class="subscribeContainer">
-                        <div class="subscribeWrapper">
-                            <h1>SUBSCRIBE TO GET MORE</h1>
-                            <span>Stay Informed, Decide Later –<br/>subscribe now with no commitment and no pressure!</span>
-                            <div class="buttonBox">
-                                <button class="subscribeButton">Learn more</button>
-                                <button class="subscribeButton">Buy now for $3.75</button>
-                            </div>
-                        </div>
-                    </article>
                 </main>
             <footer>
                 <menu class="footerMenu">
