--- a/events.html
+++ b/events.html
@@ -46,57 +46,55 @@
                 <main class="main">
                     <div class="wrapper">
                         <div class="contentBlock">
-                            <menu class="menuArticles">
-                                <ul>
-                                    <li><a href="#">VIEW ALL</a></li>
-                                    <li><a href="#">SCIENCE</a></li>
-                                    <li><a href="#">ART</a></li>
-                                    <li><a href="#">TRAVEL</a></li>
-                                    <li><a href="#">TECHNOLOGY</a></li>
-                                </ul>
-                            </menu>
-                            <div class="articleItemBlock">
-                                <div class="contentLatestBlock articleImg">
+                            <div class="eventItemBlock">
+                                <div class="contentLatestBlock eventBlock">
                                     <img src="./img/news/image_1.png" alt="img">
                                     <div class="contentLatestBoxItem articleBoxItem">
-                                        <div class="infoBox">
-                                            <p class="titleLatest"></p>
-                                            <p class="categoryItem">ART</p>
-                                            <p class="dateBlock">10 October 2024</p>
-                                        </div>
-                                        <span class="contentArticleTitle">TITLE</span>
-                                        <p class="contentArticleItemText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam quis quam. Morbi scelerisque luctus velit. Fusce wisi. Aliquam id dolor. Suspendisse sagittis ultrices augue. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Etiam quis quam. </p>
-                                        <button class="readMoreButton articleButton">Read more</button>
+                                        <span class="eventArticleTitle">STARLIGHT SYMPHONY AT SILVER LAKE</span>
+                                        <p class="contentEventItemText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam quis quam. Morbi scelerisque luctus velit. Fusce wisi. Aliquam id dolor. Suspendisse sagittis ultrices augue. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Etiam quis quam. </p>
+                                        <p class="locationText">Location: Silver Lake Amphitheater, Lakeshire</p>
+                                    </div>
+                                </div>
+                                    <table>
+                                        <tbody class="dateBlock">
+                                            <tr>
+                                                <th>monday</th>
+                                                <th>wednesday</th>
+                                                <th>tuesday</th>
+                                                <th>thursday</th>
+                                                <th>friday</th>
+                                                <th>saturday</th>
+                                                <th>sunday</th>
+                                            </tr>
+                                            <tr>
+                                                <td>10 October</td>
+                                                <td>11 October</td>
+                                                <td>12 October</td>
+                                                <td>13 October</td>
+                                                <td>14 October</td>
+                                                <td>15 October</td>
+                                                <td>16 October</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                            </div>
+                            <div class="eventItemBlock">
+                                <div class="contentLatestBlock eventBlock">
+                                    <img src="./img/news/image_1.png" alt="img">
+                                    <div class="contentLatestBoxItem articleBoxItem">
+                                        <span class="eventArticleTitle">LAKESHIRE LUMINARIES LANTERN FESTIVAL</span>
+                                        <p class="contentEventItemText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam quis quam. Morbi scelerisque luctus velit. Fusce wisi. Aliquam id dolor. Suspendisse sagittis ultrices augue. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Etiam quis quam. </p>
+                                        <p class="locationText">Location: Silver Lake Amphitheater, Lakeshire</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="articleItemBlock">
-                                <div class="contentLatestBlock articleImg">
+                            <div class="eventItemBlock">
+                                <div class="contentLatestBlock eventBlock">
                                     <img src="./img/news/image_1.png" alt="img">
                                     <div class="contentLatestBoxItem articleBoxItem">
-                                        <div class="infoBox">
-                                            <p class="titleLatest"></p>
-                                            <p class="categoryItem">ART</p>
-                                            <p class="dateBlock">10 October 2024</p>
-                                        </div>
-                                        <span class="contentArticleTitle">TITLE</span>
-                                        <p class="contentArticleItemText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam quis quam. Morbi scelerisque luctus velit. Fusce wisi. Aliquam id dolor. Suspendisse sagittis ultrices augue. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Etiam quis quam. </p>
-                                        <button class="readMoreButton articleButton">Read more</button>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="articleItemBlock">
-                                <div class="contentLatestBlock articleImg">
-                                    <img src="./img/news/image_1.png" alt="img">
-                                    <div class="contentLatestBoxItem articleBoxItem">
-                                        <div class="infoBox">
-                                            <p class="titleLatest"></p>
-                                            <p class="categoryItem">ART</p>
-                                            <p class="dateBlock">10 October 2024</p>
-                                        </div>
-                                        <span class="contentArticleTitle">TITLE</span>
-                                        <p class="contentArticleItemText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam quis quam. Morbi scelerisque luctus velit. Fusce wisi. Aliquam id dolor. Suspendisse sagittis ultrices augue. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Etiam quis quam. </p>
-                                        <button class="readMoreButton articleButton">Read more</button>
+                                        <span class="eventArticleTitle">GREAT LAKESHIRE BAKE-OFF</span>
+                                        <p class="contentEventItemText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam quis quam. Morbi scelerisque luctus velit. Fusce wisi. Aliquam id dolor. Suspendisse sagittis ultrices augue. Mauris suscipit, ligula sit amet pharetra semper, nibh ante cursus purus, vel sagittis velit mauris vel metus. Etiam quis quam. </p>
+                                        <p class="locationText">Location: Silver Lake Amphitheater, Lakeshire</p>
                                     </div>
                                 </div>
                             </div>   
