--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="articles.html">Articles</a></li>
-                        <li><a href="#">Events</a></li>
+                        <li><a href="events.html">Events</a></li>
                         <li><a href="#">About us</a></li>
                     </ul>
                     <div class="search">
@@ -183,7 +183,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="articles.html">Articles</a></li>
-                        <li><a href="#">Events</a></li>
+                        <li><a href="events.html">Events</a></li>
                         <li><a href="#">About us</a></li>
                     </ul>
                 </menu>
