--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
                         </svg>
                     </a>
                     <div class="loginBox abel-regular">
-                        <a href="#">
+                        <a href="login.html">
                             <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M9.24796 10.4091C6.27116 10.4091 0.326904 11.9033 0.326904 14.8695V18.2148H18.169V14.8695C18.169 11.9033 12.2257 10.4091 9.24796 10.4091ZM9.24796 0.373657C6.78396 0.373657 4.78743 2.36935 4.78743 4.83383C4.78743 7.29805 6.78396 9.29412 9.24796 9.29412C11.7128 9.29412 13.7085 7.29805 13.7085 4.83383C13.7085 2.36935 11.7128 0.373657 9.24796 0.373657ZM9.24796 12.5277C12.5605 12.5277 16.0509 14.1559 16.0509 14.8695V16.0963H2.44589V14.8695C2.44589 14.1559 5.93642 12.5277 9.24796 12.5277ZM9.24796 2.49216C10.5416 2.49216 11.5905 3.54037 11.5905 4.83383C11.5905 6.12715 10.5416 7.17562 9.24796 7.17562C7.95431 7.17562 6.90641 6.12715 6.90641 4.83383C6.90641 3.54037 7.95431 2.49216 9.24796 2.49216Z" fill="#9C9C9C"/>
                             </svg>                                
@@ -54,7 +54,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="articles.html">Articles</a></li>
-                        <li><a href="#">Events</a></li>
+                        <li><a href="events.html">Events</a></li>
                         <li><a href="#">About us</a></li>
                     </ul>
                 </menu>
