--- a/index.html
+++ b/index.html
@@ -60,7 +60,51 @@
                                         <button class="readMoreButton">Read more</button>
                                     </div>
                                 </div>
-                            </div> 
+                            </div>
+                            <section class="eventBox">
+                                <h5 class="titleWidget">EVENTS</h5>
+                                <hr>
+                                <aside class="eventItemContainer">
+                                    <a class="eventItem">
+                                        <p class="eventItemText">Starlight Symphony at Silver Lake</p>
+                                        <span class="eventItemDate">10 - 16 October</span>
+                                    </a>
+                                    <a class="eventItem">
+                                        <p class="eventItemText">Luminaries Lantern Festival</p>
+                                        <span class="eventItemDate">11 - 14 October</span>
+                                    </a>
+                                    <a class="eventItem">
+                                        <p class="eventItemText">Great Lakeshire Bake-Off</p>
+                                        <span class="eventItemDate">13 - 14 October</span>
+                                    </a>
+                                </aside>
+                                <button class="learnMoreButton">Learn more</button>
+                            </section>
+                            <section class="eventBox">
+                                <h5 class="titleWidget">AUTHORS</h5>
+                                <aside class="authorItemContainer">
+                                    <a class="eventItem">
+                                        <img class="authorImg" src="" alt="">
+                                        <span class="authorName">Ann Armstong</span>
+                                    </a>
+                                    <a class="eventItem">
+                                        <img class="authorImg" src="" alt="">
+                                        <span class="authorName">Nicol  Kinsley</span>
+                                    </a>
+                                    <a class="eventItem">
+                                        <img class="authorImg" src="" alt="">
+                                        <span class="authorName">David Bufo</span>
+                                    </a>
+                                    <a class="eventItem">
+                                        <img class="authorImg" src="" alt="">
+                                        <span class="authorName">Loren Json</span>
+                                    </a>
+                                    <a class="eventItem">
+                                        <img class="authorImg" src="" alt="">
+                                        <span class="authorName">Jack Lodsen</span>
+                                    </a>
+                                </aside>
+                            </section>
                             <div class="newsBlock">
                                 <h2 class="titleNewsBlock">DISCOVER</h2>
                                     <div class="newsItemBox">
@@ -144,24 +188,7 @@
                                     </defs>
                                 </svg>    
                             </section>
-                            <section class="widgetBlock">
-                                <h5 class="titleWidget">EVENTS</h5>
-                                <aside class="eventItemContainer">
-                                    <a class="eventItem">
-                                        <p class="eventItemText">Starlight Symphony at Silver Lake</p>
-                                        <span class="eventItemDate">10 - 16 October</span>
-                                    </a>
-                                    <a class="eventItem">
-                                        <p class="eventItemText">Luminaries Lantern Festival</p>
-                                        <span class="eventItemDate">11 - 14 October</span>
-                                    </a>
-                                    <a class="eventItem">
-                                        <p class="eventItemText">Great Lakeshire Bake-Off</p>
-                                        <span class="eventItemDate">13 - 14 October</span>
-                                    </a>
-                                </aside>
-                                <button class="learnMoreButton">Learn more</button>
-                            </section>
+                            
                         </div>
                     </div>
                     <article class="subscribeContainer">
